<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.controles_ejercicio3.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/estilogeneral_letras">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/nombre" />

                <EditText
                    android:id="@+id/et_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/apellidos" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d20"
                    android:text="@string/provincia" />

                <Spinner
                    android:id="@+id/sp_provincias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d20"
                    android:text="@string/edad" />

                <EditText
                    android:id="@+id/et_edad"
                    android:layout_width="@dimen/d35"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="2"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d20"
                    android:text="@string/estado" />

                <RadioGroup
                    android:id="@+id/rg_estadocivil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtn_soltero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/tipografia"
                        android:text="@string/soltera" />

                    <RadioButton
                        android:id="@+id/rbtn_casado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/tipografia"
                        android:layout_weight="1"
                        android:text="@string/casada" />

                    <RadioButton
                        android:id="@+id/rbtn_divorciado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/tipografia"
                        android:layout_weight="1"
                        android:text="@string/divorciada" />

                    <RadioButton
                        android:id="@+id/rbtn_viudo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/tipografia"
                        android:layout_weight="1"
                        android:text="@string/viuda" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/cb_terminos"
                    android:layout_width="match_parent"
                    android:onClick="activable"
                    android:layout_height="wrap_content"
                    android:text="@string/terminos" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="aceptar"
            android:enabled="false"
            android:text="@string/aceptar" />

        <ImageButton
            android:id="@+id/img_papelera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="false"
            android:textAlignment="center"
            android:onClick="papelera"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tipografia"
            android:layout_weight="1"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/txt_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tipografia"
            android:layout_weight="1"
            android:text="@string/apellidos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txt_provincia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/tipografia"
            android:text="@string/provincia" />

        <TextView
            android:id="@+id/txt_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tipografia"
            android:layout_weight="1"
            android:text="@string/estado" />

        <TextView
            android:id="@+id/txt_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tipografia"
            android:layout_weight="1"
            android:text="@string/edad" />
    </LinearLayout>

    <LinearLayout
        style="@style/estilogeneral_letras"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/img_anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="anterior"
            app:srcCompat="@drawable/anterior" />

        <ImageButton
            android:id="@+id/img_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"

            android:onClick="siguiente"
            app:srcCompat="@drawable/siguiente" />

    </LinearLayout>

</LinearLayout>
